--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -1,33 +1,25 @@
-name: Развертывание сайта
+name: CI/CD Pipeline
 
 on:
- push:
- branches: main
- pull_request:
- branches: main
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
- deploy:
- name: Сборка и развертывание сайта
- runs-on: ubuntu-latest
- 
- steps:
- - name: Клонирование кода
- uses: actions/checkout@v3
- 
- - name: Установка зависимостей
- run: |
- npm install
- # Или yarn install, если используете Yarn
- 
- - name: Сборка проекта
- run: npm run build
- 
- # Убираем проблемный step с валидацией HTML
- 
- - name: Развертывание на GitHub Pages
- uses: peaceiris/actions-gh-pages@v3
- with:
- github_token: ${{ secrets.GITHUB_TOKEN }}
- publish_branch: gh-pages
- publish_dir:./build
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Validate HTML
+        uses: micmro/html-validator-action@v2
+        
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.3.3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: .
